# Manim-Agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  cloud_scenes.json  docker-compose.yml  prompts.txt  pyproject.toml  requirements.txt  test_out.txt
ai_core/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
ai_core/app/: __init__.py  backend_client.py  config.py  errors.py  llm.py  main.py  models.py  prompts.py  renderer.py  review_loop.py  runtime_api_context.py  step_executor.py  tts.py  worker.py
ai_core/config/: agent_models.yaml  manim_compatibility.yaml
ai_core/tests/: test_key_pool_and_renderer.py  test_readiness_and_concat.py  test_review_loop.py  test_runtime_api_context.py  test_step_executor.py  test_worker_artifact_cleanup.py
backend/: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/.github/workflows/: ci.yml
backend/ai_engine/: agent_runner.py  builder_loop.py  config.py  dsl_compiler.py  llm_client.py  orchestrator.py  prompts.py
backend/ai_engine/agents/: builder.py  code_reviewer.py  director.py  planner.py  repair.py  scene_designer.py  visual_reviewer.py
backend/ai_engine/config/: agent_models.yaml
backend/ai_engine/prompts/: builder_system.txt  repair_system.txt  scene_designer_system.txt
backend/ai_engine/rag/: api_registry.py
backend/ai_engine/workflow/: __init__.py  graph.py
backend/api/: access.py  deps.py
backend/api/v1/: jobs.py  pipeline_runs.py  primitives.py  projects.py  render.py  router.py  scenes.py  voice_jobs.py  ws.py
backend/app/: main.py
backend/app/api/: __init__.py  access.py  deps.py
backend/app/api/v1/: chat.py  hitl.py  internal.py  jobs.py  projects.py  render.py  router.py  scenes.py  scenes_crud.py  users.py  ws.py
backend/app/core/: config.py  correlation.py  errors.py  limiter.py  security_headers.py  sentry_setup.py  static_spa.py  supabase_jwt.py  websocket_manager.py
backend/app/db/: base.py  content_store.py  supabase_store.py
backend/app/services/: ai_queue.py  cache.py  events.py  hitl_service.py  hitl_store.py  job_store.py  pipeline_lock.py  project_lifecycle.py  redis_client.py  render_snapshot.py  supabase_http.py  supabase_storage_rest.py
backend/backend/: main.py
backend/backend/api/: deps.py
backend/backend/api/v1/: primitives.py  projects.py  render.py  router.py  scenes.py  scenes_crud.py  scenes_pipeline.py  scenes_review.py  scenes_versions.py  ws.py
backend/backend/core/: config.py  errors.py  limiter.py  sentry_setup.py  websocket_manager.py
backend/backend/db/: base.py  content_store.py  supabase_store.py
backend/backend/services/: code_sandbox.py  job_store.py  manim_validator.py  scene_service.py  version_store.py
backend/backend/services/tts/: __init__.py  alignment.py
backend/core/: config.py  correlation.py  errors.py  limiter.py  websocket_manager.py
backend/db/: base.py  content_store.py  supabase_store.py
backend/deploy/huggingface/tts-worker/: README.template.md
backend/docker/api/: Dockerfile
backend/docs/: upgrade.md
backend/primitives/: registry.py
backend/scripts/: generate_ts_types.py
backend/scripts/internal/: run_local_e2e.py
backend/services/: __init__.py  builder_review_loop.py  code_sandbox.py  content_store.py  frame_info.py  job_store.py  job_wait.py  redis_client.py  supabase_content_store.py  supabase_pipeline_rest.py  supabase_storage_rest.py  sync_engine_logic.py  voice_job_store.py
backend/services/tts/: segment_alignment.py
backend/shared/: pipeline_log.py
backend/shared/schemas/: __init__.py  artifact_version.py  pagination.py  project.py  render_api.py  scene.py  scene_dsl.py  validation.py
backend/supabase/: README.md  config.toml  init_schema.sql  postmigration_gate.sql  validate_migrations.sh
backend/supabase/migrations/: 20260219000000_init_schema.sql  20260508000000_add_pipeline_events.sql  20260618000000_scene_dsl.sql  20260618010000_artifact_versions.sql  20260622000000_secure_artifact_versions.sql  20260712000000_review_loop_upgrade.sql  20260713000000_user_settings.sql  20260713000001_master_minions_pipeline.sql  20260716000000_render_and_status.sql  20260718000000_runtime_lifecycle_backfill.sql  20260718000001_drop_legacy_dashboard_rpc.sql  20260720000000_settings_extension.sql  20260720000001_idea_sketch_stage.sql  20260721000000_production_hardening.sql  20260723000000_align_llm_models.sql
backend/tests/: conftest.py  test_backend_reliability.py  test_config.py  test_hitl_pipeline.py  test_integration_e2e.py  test_master_minions_e2e.py  test_public_api_contract.py  test_security_headers.py  test_static_spa.py  test_supabase_auth.py  test_user_settings.py
backend/tests/fixtures/: planner_output_valid.json
backend/tests/unit/ai_engine/: test_dsl_compiler.py  test_dsl_pipeline.py  (+5 more)
backend/worker/: celery_app.py  orchestrator_tasks.py  renderer.py  runtime.py  tasks.py  tts_runtime.py  tts_tasks.py  worker_health.py
(+391 files in other folders)
